@@ -58,7 +58,10 @@ void QZBarThread::image_callback (Image &image)
 
 void QZBarThread::processImage (Image &image)
 {
-    scanner.scan(image);
+    {
+        Image tmp = image.convert(*(long*)"Y800");
+        scanner.scan(tmp);
+    }
     window.draw(image);
     if(this->image && this->image != &image) {
         delete this->image;
